--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,226 +1,51 @@
 pipeline {
     agent any
     
-    environment {
-        DOCKER_REGISTRY = 'ilia2014a'
-        APP_VERSION = "${env.BUILD_NUMBER}"
-    }
-    
-    options {
-        timeout(time: 30, unit: 'MINUTES')
-        buildDiscarder(logRotator(numToKeepStr: '10'))
-        disableConcurrentBuilds()
-    }
-    
     stages {
-        stage('Notify Start') {
-            steps {
-                script {
-                    sendTelegramNotification("🚀 Build Started", "green")
-                }
-            }
-        }
-        
-        stage('Checkout & Setup') {
+        stage('Checkout') {
             steps {
                 checkout scm
-                sh '''
-                    echo "=== Build Environment ==="
-                    echo "Build: ${BUILD_NUMBER}"
-                    echo "Branch: ${GIT_BRANCH}"
-                    echo "Commit: ${GIT_COMMIT}"
-                    echo "Node: $(node --version 2>/dev/null || echo 'Node not installed')"
-                    echo "NPM: $(npm --version 2>/dev/null || echo 'NPM not installed')"
-                    echo "Docker: $(docker --version 2>/dev/null || echo 'Docker not installed')"
-                '''
-            }
-        }
-        
-        stage('Install Dependencies') {
-            parallel {
-                stage('Backend Dependencies') {
-                    steps {
-                        dir('backend') {
-                            sh 'npm install'
-                        }
-                    }
-                }
-                stage('Frontend Dependencies') {
-                    steps {
-                        dir('frontend') {
-                            sh 'npm install'
-                        }
-                    }
-                }
-            }
-        }
-        
-        stage('Run Tests') {
-            parallel {
-                stage('Backend Tests') {
-                    steps {
-                        dir('backend') {
-                            sh 'npm test || echo "No tests found or tests failed - continuing"'
-                        }
-                    }
-                }
-                stage('Frontend Tests') {
-                    steps {
-                        dir('frontend') {
-                            sh 'npm test -- --watchAll=false --passWithNoTests || echo "No tests found - continuing"'
-                        }
-                    }
-                }
+                bat 'echo "Build started: %BUILD_NUMBER%"'
             }
         }
         
         stage('Build Frontend') {
             steps {
                 dir('frontend') {
-                    sh 'npm run build'
-                    sh 'ls -la dist/'
+                    bat 'npm install'
+                    bat 'npm run build'
                 }
             }
         }
         
-        stage('Build Docker Images') {
+        stage('Build Backend') {
             steps {
-                script {
-                    sh """
-                        docker build -t ${DOCKER_REGISTRY}/calculator-frontend:${APP_VERSION} ./frontend || echo "Docker build failed - is Docker running?"
-                    """
-                    
-                    sh """
-                        docker build -t ${DOCKER_REGISTRY}/calculator-backend:${APP_VERSION} ./backend || echo "Docker build failed - is Docker running?"
-                    """
+                dir('backend') {
+                    bat 'npm install'
                 }
             }
         }
         
-        stage('Security Scan') {
+        stage('Deploy') {
             steps {
-                script {
-                    echo "Security scanning skipped - trivy not installed"
-                }
-            }
-        }
-        
-        stage('Push to DockerHub') {
-            steps {
-                script {
-                    withCredentials([usernamePassword(
-                        credentialsId: 'dockerhub-credentials', 
-                        usernameVariable: 'DOCKER_USER', 
-                        passwordVariable: 'DOCKER_PASS'
-                    )]) {
-                        sh '''
-                            echo "Logging into DockerHub..."
-                            echo "${DOCKER_PASS}" | docker login -u "${DOCKER_USER}" --password-stdin || echo "Docker login failed"
-                            
-                            echo "Pushing images..."
-                            docker push ${DOCKER_REGISTRY}/calculator-frontend:${APP_VERSION} || echo "Push frontend failed"
-                            docker push ${DOCKER_REGISTRY}/calculator-backend:${APP_VERSION} || echo "Push backend failed"
-                            
-                            docker logout || echo "Logout failed"
-                        '''
-                    }
-                }
-            }
-        }
-        
-        stage('Deploy to Staging') {
-            steps {
-                script {
-                    sh '''
-                        echo "Deploying application..."
-                        
-                        docker-compose down || echo "No containers to stop"
-                        
-                        docker-compose up -d || echo "Docker compose failed"
-                        
-                        echo "Waiting for services to start..."
-                        sleep 30
-                        
-                        echo "Checking backend health..."
-                        curl -f http://localhost:3001/health || echo "Backend health check failed"
-                        
-                        echo "Checking frontend health..."
-                        curl -f http://localhost:3000 || echo "Frontend health check failed"
-                        
-                        echo "Deployment completed!"
-                    '''
-                }
-            }
-        }
-        
-        stage('Smoke Tests') {
-            steps {
-                script {
-                    sh '''
-                        echo "Running smoke tests..."
-                        
-                        echo "Testing calculation API..."
-                        curl -f -X POST http://localhost:3001/calculate \
-                          -H "Content-Type: application/json" \
-                          -d '{"expression":"2+2"}' || echo "Calculation test failed"
-                          
-                        echo "Smoke tests completed!"
-                    '''
-                }
+                bat '''
+                    docker-compose down || echo "No containers running"
+                    docker-compose up -d
+                    echo "Deployment completed! 🚀"
+                '''
             }
         }
     }
     
     post {
         always {
-            echo "Cleaning up workspace..."
             cleanWs()
         }
         success {
-            script {
-                sendTelegramNotification("✅ Build #${BUILD_NUMBER} Successful! Application deployed and tested.", "green")
-            }
+            bat 'echo "✅ Build %BUILD_NUMBER% completed successfully!"'
         }
         failure {
-            script {
-                sendTelegramNotification("❌ Build #${BUILD_NUMBER} Failed! Check Jenkins logs for details.", "red")
-            }
+            bat 'echo "❌ Build %BUILD_NUMBER% failed!"'
         }
-        unstable {
-            script {
-                sendTelegramNotification("⚠️ Build #${BUILD_NUMBER} Unstable! Some tests may have failed.", "yellow")
-            }
-        }
-    }
-}
-
-// Функция для отправки Telegram уведомлений
-def sendTelegramNotification(message, color) {
-    def emoji = color == "green" ? "✅" : color == "red" ? "❌" : "⚠️"
-    def fullMessage = """
-${emoji} <b>Calculator App CI/CD</b>
-${message}
-📁 <b>Project:</b> ${env.JOB_NAME}
-🔨 <b>Build:</b> #${env.BUILD_NUMBER}
-🌿 <b>Branch:</b> ${env.GIT_BRANCH}
-    """.trim()
-    
-    try {
-        withCredentials([
-            string(credentialsId: 'telegram-bot-token', variable: 'BOT_TOKEN'),
-            string(credentialsId: 'telegram-chat-id', variable: 'CHAT_ID')
-        ]) {
-            sh """
-                curl -s -X POST "https://api.telegram.org/bot${BOT_TOKEN}/sendMessage" \
-                  -H "Content-Type: application/json" \
-                  -d '{
-                    "chat_id": "${CHAT_ID}",
-                    "text": "${fullMessage}",
-                    "parse_mode": "HTML"
-                  }' || echo "Telegram notification failed - check credentials"
-            """
-        }
-    } catch (Exception e) {
-        echo "Telegram credentials not configured: ${e.message}"
     }
 }
