--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -35,6 +35,14 @@ pipeline {
                 '''
             }
         }
+        
+        stage('Send Telegram Notification') {
+            steps {
+                script {
+                    sendTelegramNotification("✅ Build #${env.BUILD_NUMBER} completed successfully! Application deployed.", "success")
+                }
+            }
+        }
     }
     
     post {
@@ -45,7 +53,45 @@ pipeline {
             bat 'echo "✅ Build %BUILD_NUMBER% completed successfully!"'
         }
         failure {
+            script {
+                sendTelegramNotification("❌ Build #${env.BUILD_NUMBER} failed! Check Jenkins logs.", "failure")
+            }
             bat 'echo "❌ Build %BUILD_NUMBER% failed!"'
         }
+    }
+}
+
+// Функция для отправки Telegram уведомлений через curl.exe
+def sendTelegramNotification(message, status) {
+    def emoji = status == "success" ? "✅" : "❌"
+    def fullMessage = """
+${emoji} <b>Calculator App CI/CD</b>
+
+${message}
+
+📁 <b>Project:</b> ${env.JOB_NAME}
+🔨 <b>Build:</b> #${env.BUILD_NUMBER}
+🌿 <b>Branch:</b> ${env.GIT_BRANCH}
+🕐 <b>Time:</b> ${new Date().format("yyyy-MM-dd HH:mm:ss")}
+    """.trim()
+    
+    echo "Attempting to send Telegram notification: ${message}"
+    
+    try {
+        withCredentials([
+            string(credentialsId: 'telegram-bot-token', variable: 'BOT_TOKEN'),
+            string(credentialsId: 'telegram-chat-id', variable: 'CHAT_ID')
+        ]) {
+            // Используем curl.exe для Windows
+            bat """
+                curl.exe -s -X POST "https://api.telegram.org/bot%BOT_TOKEN%/sendMessage" ^
+                  -d "chat_id=%CHAT_ID%" ^
+                  -d "text=${fullMessage}" ^
+                  -d "parse_mode=HTML" ^
+                  || echo "Telegram notification failed - check credentials or network"
+            """
+        }
+    } catch (Exception e) {
+        echo "Telegram notification error: ${e.message}"
     }
 }
