--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -35,14 +35,6 @@ pipeline {
                 '''
             }
         }
-        
-        stage('Send Telegram Notification') {
-            steps {
-                script {
-                    sendTelegramNotification("✅ Build #${env.BUILD_NUMBER} completed successfully! Application deployed.", "success")
-                }
-            }
-        }
     }
     
     post {
@@ -50,48 +42,34 @@ pipeline {
             cleanWs()
         }
         success {
-            bat 'echo "✅ Build %BUILD_NUMBER% completed successfully!"'
+            script {
+                withCredentials([
+                    string(credentialsId: 'telegram-bot-token', variable: 'BOT_TOKEN'),
+                    string(credentialsId: 'telegram-chat-id', variable: 'CHAT_ID')
+                ]) {
+                    bat """
+                        curl.exe -s -X POST "https://api.telegram.org/bot%BOT_TOKEN%/sendMessage" ^
+                        -d "chat_id=%CHAT_ID%" ^
+                        -d "text=✅ Calculator App Build #%BUILD_NUMBER% Success! Application deployed and running." ^
+                        && echo "Success notification sent!"
+                    """
+                }
+            }
         }
         failure {
             script {
-                sendTelegramNotification("❌ Build #${env.BUILD_NUMBER} failed! Check Jenkins logs.", "failure")
+                withCredentials([
+                    string(credentialsId: 'telegram-bot-token', variable: 'BOT_TOKEN'),
+                    string(credentialsId: 'telegram-chat-id', variable: 'CHAT_ID')
+                ]) {
+                    bat """
+                        curl.exe -s -X POST "https://api.telegram.org/bot%BOT_TOKEN%/sendMessage" ^
+                        -d "chat_id=%CHAT_ID%" ^
+                        -d "text=❌ Calculator App Build #%BUILD_NUMBER% Failed! Check Jenkins logs." ^
+                        && echo "Failure notification sent!"
+                    """
+                }
             }
-            bat 'echo "❌ Build %BUILD_NUMBER% failed!"'
         }
-    }
-}
-
-// Функция для отправки Telegram уведомлений через curl.exe
-def sendTelegramNotification(message, status) {
-    def emoji = status == "success" ? "✅" : "❌"
-    def fullMessage = """
-${emoji} <b>Calculator App CI/CD</b>
-
-${message}
-
-📁 <b>Project:</b> ${env.JOB_NAME}
-🔨 <b>Build:</b> #${env.BUILD_NUMBER}
-🌿 <b>Branch:</b> ${env.GIT_BRANCH}
-🕐 <b>Time:</b> ${new Date().format("yyyy-MM-dd HH:mm:ss")}
-    """.trim()
-    
-    echo "Attempting to send Telegram notification: ${message}"
-    
-    try {
-        withCredentials([
-            string(credentialsId: 'telegram-bot-token', variable: 'BOT_TOKEN'),
-            string(credentialsId: 'telegram-chat-id', variable: 'CHAT_ID')
-        ]) {
-            // Используем curl.exe для Windows
-            bat """
-                curl.exe -s -X POST "https://api.telegram.org/bot%BOT_TOKEN%/sendMessage" ^
-                  -d "chat_id=%CHAT_ID%" ^
-                  -d "text=${fullMessage}" ^
-                  -d "parse_mode=HTML" ^
-                  || echo "Telegram notification failed - check credentials or network"
-            """
-        }
-    } catch (Exception e) {
-        echo "Telegram notification error: ${e.message}"
     }
 }
